--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -8,7 +8,15 @@
   justify-content: center;
 }
 
-
+.auth-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(135deg, #6e8efb 0%, #a777e3 100%);
+  z-index: -1;
+}
 
 .auth-container {
   max-width: 100vw;
